# python-utilities

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pylintrc  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: _get_python_version_matrix.yml  cicd.yml  codecov.yml  docs.yml  python-linting.yml  python-tests.yml  reusable-get-python-version-matrix.yml  security-scan.yml  workflow_config
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  constants.rst  index.rst  spelling_wordlist.txt
docs/source/_scripts/: create_unit_table.py
docs/source/_templates/: api_reference_arrays_equality.rst  api_reference_arrays_max_len.rst  api_reference_class_template.rst  api_reference_files_classes.rst  api_reference_function_template.rst  api_reference_strings_content.rst
docs/source/api_reference/: arrays.rst  debugging.rst  dev.rst  files.rst  (+4 more)
pyxx/: __init__.py
pyxx/arrays/: __init__.py
pyxx/debugging/: __init__.py
pyxx/dev/: __init__.py
pyxx/files/: __init__.py  exceptions.py
pyxx/numbers/: __init__.py
pyxx/strings/: __init__.py  brackets.py  content.py  exceptions.py  split.py
pyxx/units/: __init__.py  exceptions.py
tests/: __init__.py
tests/_sample_files/: textfile_overwrite.txt  textfile_read.txt  textfile_read_crlf.bat  textfile_read_no_trailing_newline.txt  textfile_write.txt  textfile_write_append_after.txt  textfile_write_append_before.txt  textfile_write_custom.txt  textfile_write_no_newline.txt
tests/arrays/: __init__.py  test_convert.py
tests/strings/: __init__.py  brackets.py  split.py  test_brackets.py  test_content.py  test_split.py
(+86 files in other folders)
