[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyxx"
description = "Collection of useful Python utilities and tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dynamic = [
    "dependencies",
    "version",
    "urls",
]

[tool.setuptools.dynamic]
version = {attr = "pyxx.__version__"}
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
where = ["."]
include = ["pyxx*"]
