[metadata]
name = pyxx
version = attr: pyxx.__version__
description = Collection of useful Python utilities and tools
long_description = file: README.md
license = MIT
url = https://github.com/nathan-hess/python-utilities
project_urls =
    Documentation = http://pyxx.readthedocs.io/

[options]
python_requires = >=3.8
install_requires = file: requirements.txt
packages = find:

[options.packages.find]
include =
    pyxx*
