[metadata]
name = pyxx
version = attr: pyxx.__version__
description = Collection of useful Python utilities and tools
long_description = file: README.md
long_description_content_type = text/markdown
author = Nathan Hess
license = MPL-2.0
url = https://github.com/nathan-hess/python-utilities
project_urls =
    Documentation = https://pyxx.readthedocs.io

[options]
python_requires = >=3.8
include_package_data = True
install_requires = file: requirements.txt
packages = find:

[options.entry_points]
console_scripts =
    unit-converter = pyxx:units.execute_from_command_line

[options.packages.find]
include =
    pyxx*
